Fix: Text content spacing

--- a/assets/grid.css
+++ b/assets/grid.css
@@ -243,23 +243,22 @@ pre {
 pre, code {
   white-space: pre; /* pre-wrap will new line @ mobile v scroll now? */
   font-family: monospace;
-  margin-bottom:1rem;
   color: #f0f0f0;
   background: #282C34;
-  margin: 1rem 0 !important;
+  margin: 2rem 0 !important;
   overflow: auto;
   border-radius: .5rem;
   max-width: 90ch;
 }
 
-p code {
+p code, li code {
   color: #292967;
   background: #F2F2F2;
   padding:.25rem;
   font-family: monospace;
 }
 
-blockquote {border-left: 3px solid #d6d6d6;padding:0 .5rem !important;margin:0 1.5rem !important;font-weight: 300 !important;}
+blockquote {border-left: 3px solid #d6d6d6;padding:0 1rem !important;margin:0 1.5rem !important;font-weight: 300 !important;}
 h1,
 h2,
 h3,
@@ -305,7 +304,9 @@ h6 {
 .post-content h5,
 .post-content h6 {
   color: #000;
-  margin-bottom: 0.5rem;
+  font-weight: 600;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 .single {
   max-width: 1200px;
